<resources>
    <string name="app_name">sampleInsuranceApp</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_your_existing_account">Login to your existing account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="did_you_forget_your_password">Did you forget your password ?</string>
    <string name="reset_password">Reset Password</string>
    <string name="login">Login</string>
    <string name="login_with">Login with</string>
    <string name="don_t_have_and_account_yet">Don\'t have and account yet ?</string>
    <string name="loading">Loading</string>
    <string name="brokerage">Brokerage</string>
    <string name="digital_insurance_mobile_app">Digital Insurance Mobile App</string>
    <string name="now_you_can_get_online_questions_for">Now you can get Online Questions For</string>
    <string name="medical_insurance">Medical Insurance</string>
    <string name="vehicle_insurance">Vehicle Insurance</string>
    <string name="travel_insurance">Travel Insurance</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="meet_our_preferred_insurers">Meet our Preferred Insurers</string>
</resources>